--- a/pd_mk/configure.ac
+++ b/pd_mk/configure.ac
@@ -47,8 +47,11 @@ AC_CHECK_HEADERS([algorithm array cassert cmath queue \
 cstdio string sys/stat.h sys/types.h ctime tuple unistd.h unordered_map \
 utility vector], [], [AC_MSG_ERROR([Missing header file])])
 
-# Check for thrift support (Facebook's Thrift RPC library)
-AC_PATH_PROG([THRIFT], [thrift], [])
+# Thrift
+AC_ARG_WITH([thrift],
+    [AS_HELP_STRING([--with-thrift], [Thrift selector])],
+    [THRIFT=$withval],
+    [AC_PATH_PROG([THRIFT], [thrift], [])])
 AS_IF([test x"$THRIFT" = x],
 [AC_MSG_ERROR([cannot find thrift])])
 
